--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,9 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .card:hover {
+    background-color: rgb(99, 128, 126);
+    transform: scale(1.1);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .card:hover {
+    background-color: rgb(185, 185, 185);
+    transform: scale(1.01);
+    transition: background-color 0.3s ease, transform 0.3s ease;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
